# glasgow-uni-webscrapper

./: GUSS_AI_Target_Webpages.csv  pyproject.toml  webscraper.py
llms/aiseo/: out.txt  prompter.py
